[package]
name = "git_ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.12.2"
clap = { version = "4.3.19", features = ["derive"] }
rust-ini = "0.19.0"
serde = "1.0.182"
serde_json = "1.0.104"
textwrap = "0.16.0"
tokio = { version = "1.29.1", features = ["rt-multi-thread"] }
